--- a/config-service/src/main/resources/application.yaml
+++ b/config-service/src/main/resources/application.yaml
@@ -2,5 +2,12 @@ server:
   port: 8888  # Config Server typically runs on port 8888
 
 spring:
+  profiles:
+    active: native
   application:
     name: config-server  # Name of the Config Server application
+  cloud:
+    config:
+      server:
+        native:
+          searchLocations: classpath:/configs
