--- a/config-service/src/main/resources/configs/task-service.yaml
+++ b/config-service/src/main/resources/configs/task-service.yaml
@@ -1,10 +1,19 @@
 server:
-  port: 0  # Let the server pick a random port
+  port: 8083  # Let the server pick a random port
 logging:
   level:
     root: INFO
 spring:
+  jpa:
+    generate-ddl: true
+    hibernate:
+      ddl-auto: update
   datasource:
-    url: jdbc:mysql://localhost:5432/taskservice
-    username: user
-    password: pass
+    driverClassName: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/m321
+    username: m321
+    password: m321
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
