--- a/statistic-service/build.gradle
+++ b/statistic-service/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation('org.springframework.cloud:spring-cloud-starter-bootstrap')
+    implementation 'org.postgresql:postgresql:42.7.2' // Use the latest stable version
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.flywaydb:flyway-database-postgresql'
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
