--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -3,3 +3,8 @@ spring:
     name: api-gateway
   config:
     import: configserver:http://localhost:8888 # Corrected the config server URL
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true  # Use Eureka for service discovery
