--- a/category-service/src/main/resources/application.yaml
+++ b/category-service/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 spring:
   application:
-    name: user-service
+    name: category-service
   config:
     import: configserver:http://localhost:8888/ # Corrected the config server URL
