--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: api-gateway
   config:
-    import: configserver:http://localhost:8888 # Corrected the config server URL
+    import: configserver:http://config-server:8888 # Corrected the config server URL
   cloud:
     gateway:
       discovery:
