--- a/statistic-service/src/main/resources/application.yaml
+++ b/statistic-service/src/main/resources/application.yaml
@@ -2,4 +2,4 @@ spring:
   application:
     name: statistic-service
   config:
-    import: configserver:http://localhost:8888/ # Corrected the config server URL
+    import: configserver:http://config-server:8888 # Corrected the config server URL
