--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation "org.flywaydb:flyway-core:9.6.0"
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation('org.springframework.cloud:spring-cloud-starter-bootstrap')
 	annotationProcessor 'org.projectlombok:lombok'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
