--- a/gateway_service.yaml
+++ b/gateway_service.yaml
@@ -5,10 +5,10 @@ metadata:
   labels:
     app: gateway
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
     - protocol: TCP
-      port: 8080
-      targetPort: 8080
+      port: 80  # External port
+      targetPort: 8080  # Internal port used by the gateway
   selector:
     app: gateway
