--- a/task-service/src/main/resources/application.yaml
+++ b/task-service/src/main/resources/application.yaml
@@ -2,4 +2,4 @@ spring:
   application:
     name: task-service
   config:
-    import: configserver:http://config-server:8888/ # Corrected the config server URL
+    import: configserver:http://config-server:8888 # Corrected the config server URL
